[workspace]
members = [
    "account-decoder",
    "programs/config",
    "programs/vote",
    "transaction-status",
]

# TODO: Remove once the "simd-accel" feature from the reed-solomon-erasure
# dependency is supported on Apple M1. v2 of the feature resolver is needed to
# specify arch-specific features.
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

#[patch.crates-io]
#ring = { path = "../../sowa/ring" }