[package]
name = "solana-account-decoder"
version = "1.10.0"
description = "Solana account decoder"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-account-decoder"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.13"
bincode = "1.3"
bs58 = "0.4"
bv = "0.11"
Inflector = "0.11"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
solana-config-program = { path = "../programs/config" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }
solana-vote-program = { path = "../programs/vote", version = "=1.10.0" }
spl-token = { version = "=3.2.0", git = "https://github.com/XX/solana-program-library-new", features = ["no-entrypoint"] }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.9"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
