[package]
name = "solana-transaction-status"
version = "1.8.0"
description = "Solana transaction status types"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-transaction-status"
license = "Apache-2.0"
edition = "2018"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
Inflector = "0.11.4"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.68"
solana-account-decoder = { path = "../account-decoder", version = "=1.8.0" }
solana-sdk = { git = "https://github.com/solana-labs/solana", version = "=1.8.0" }
solana-vote-program = { path = "../programs/vote", version = "=1.8.0" }
spl-associated-token-account-v1-0 = { package = "spl-associated-token-account", git = "https://github.com/XX/solana-program-library-new", version = "=1.0.4", features = ["no-entrypoint"] }
spl-memo = { version = "=3.0.1", git = "https://github.com/XX/solana-program-library-new", features = ["no-entrypoint"] }
spl-token-v2-0 = { package = "spl-token", version = "=3.2.0", git = "https://github.com/XX/solana-program-library-new", features = ["no-entrypoint"] }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-runtime = { git = "https://github.com/solana-labs/solana", version = "=1.8.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
