[package]
name = "solana-transaction-status"
version = "1.10.0"
description = "Solana transaction status types"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-transaction-status"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.13"
bincode = "1.3"
bs58 = "0.4"
Inflector = "0.11"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
solana-account-decoder = { path = "../account-decoder", version = "=1.10.0" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }
solana-vote-program = { path = "../programs/vote", version = "=1.10.0" }
spl-associated-token-account = { git = "https://github.com/XX/solana-program-library-new", version = "=1.0.4", features = ["no-entrypoint"] }
spl-memo = { version = "=3.0.1", git = "https://github.com/XX/solana-program-library-new", features = ["no-entrypoint"] }
spl-token = { version = "=3.2.0", git = "https://github.com/XX/solana-program-library-new", features = ["no-entrypoint"] }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-measure = { git = "https://github.com/solana-labs/solana" }
solana-metrics = { git = "https://github.com/solana-labs/solana" }
solana-runtime = { git = "https://github.com/solana-labs/solana" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
