[package]
name = "solana-config-program"
version = "1.10.0"
description = "Solana Config program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-config-program"
edition = "2021"

[dependencies]
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
solana-sdk = { git = "https://github.com/solana-labs/solana" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-program-runtime = { git = "https://github.com/solana-labs/solana" }

[dev-dependencies]
solana-logger = { git = "https://github.com/solana-labs/solana" }

[lib]
crate-type = ["lib"]
name = "solana_config_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]