[package]
name = "solana-vote-program"
version = "1.10.0"
description = "Solana Vote program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-vote-program"
edition = "2021"

[dependencies]
bincode = "1.3"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
solana-frozen-abi = { git = "https://github.com/solana-labs/solana" }#, rev = "41c160d58204cb2a9482f558f7285417dd442349" }
solana-frozen-abi-macro = { git = "https://github.com/solana-labs/solana" }#, rev = "41c160d58204cb2a9482f558f7285417dd442349" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }#, rev = "41c160d58204cb2a9482f558f7285417dd442349" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-program-runtime = { git = "https://github.com/solana-labs/solana" }
solana-metrics = { git = "https://github.com/solana-labs/solana" }#, rev = "41c160d58204cb2a9482f558f7285417dd442349" }

[dev-dependencies]
solana-logger = { git = "https://github.com/solana-labs/solana" }#, rev = "41c160d58204cb2a9482f558f7285417dd442349" }

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib"]
name = "solana_vote_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
