[package]
name = "solana-vote-program"
version = "1.10.0"
description = "Solana Vote program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-vote-program"
edition = "2021"

[dependencies]
bincode = "1.3"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
solana-frozen-abi = { git = "https://github.com/solana-labs/solana" }
solana-frozen-abi-macro = { git = "https://github.com/solana-labs/solana" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-program-runtime = { git = "https://github.com/solana-labs/solana" }
solana-metrics = { git = "https://github.com/solana-labs/solana" }

[dev-dependencies]
solana-logger = { git = "https://github.com/solana-labs/solana" }

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib"]
name = "solana_vote_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
